dashboard UI updated, error page styles changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2862 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/404.html
+++ b/public/404.html
@@ -5,49 +5,22 @@
 
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <title>The page you were looking for doesn't exist (404)</title>
-        <style type="text/css">
-            body { background-color: #f7f6f6; color: #666; text-align: center; font-family: arial, sans-serif; }
-            #wrapper{ width: 690px; height: auto;margin: 0 auto;padding-top: 50px;}
-            .top{overflow: hidden;}
-            .image{ width:245px; height: 310px; float: left; background : #b00 url(../../images/404.png) repeat;
-                    margin-top: 15px;}
-            .dialogue{ width:360px; height: 310px; float: left;padding-left: 30px;}
-            .dialogue h1{color: #ab0008; font-weight: normal; font-size: 98px;margin-bottom: 3px;margin-top: 10px;}
-            .dialogue h3{color: #ab0008; font-weight: normal; font-size: 36px;margin-top: 3px;}
-            .bottom{width: 650px;text-align: justify;color: #000000; font-size: 23px;padding-top: 20px;}
-            .footer{background-color: transparent;}
-            .footer a{color:#ab0008;text-decoration: none; font-size:16px;text-align: left;font-weight: bold;}
-            .go-back{width:200px;float: left;text-align: left;}
-            .fedena-home{width:200px;float: left;text-align: center;padding-left: 16px;}
-            .contact-fedena{width:200px;float: left;text-align: center;padding-left: 61px;}
-
-        </style>
+        <title>Sorry. That page does not exist.</title>
+        <link rel="stylesheet" media="all" type="text/css" href="stylesheets/error_page.css" />
     </head>
 
     <body>
         <div id="wrapper">
             <div class="top">
-                <div class="image">
-
-                </div>
-                <div class="dialogue">
-                    <h1>SORRY</h1>
-                    <h3>404 - Page not found</h3>
-                </div>
+                Sorry. That page does not exist.
             </div>
             <div class="bottom">
-                <p>The page you are looking for could not be found. The link to this address may be outdated, or it may be temporarily unavailable.</p>
-            </div>
-            <div class="footer">
-                <div class="go-back">
-                    <a href="javascript: history.back()">GO BACK</a>
-                </div>
+                <div class="error-details"><span class="error-code">Error 404</span>- Page not found</div>
                 <div class="fedena-home">
-                    <a href="http://www.projectfedena.org/" target="_blank">FEDENA HOME</a>
+                    <a href="/" target="_blank">Go to home</a>
                 </div>
-                <div class="contact-fedena">
-                    <a href="http://www.projectfedena.org/contact/" target="_blank">CONTACT FEDENA</a>
+                <div class="go-back">
+                    <a href="javascript: history.back()">Previous page</a>
                 </div>
             </div>
         </div>
