bug fix => error page stylesheets not loading
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2866 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/500.html
+++ b/public/500.html
@@ -6,7 +6,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <title>Sorry. Something Went Wrong.</title>
-        <link rel="stylesheet" media="all" type="text/css" href="stylesheets/error_page.css" />
+        <link rel="stylesheet" media="all" type="text/css" href="/stylesheets/error_page.css" />
     </head>
 
     <body>
